[gd_scene load_steps=19 format=3 uid="uid://brj3g4ljx7hm0"]

[ext_resource type="Script" path="res://Scripts/Grid.gd" id="1_23fgj"]
[ext_resource type="Script" path="res://Scripts/CameraControl.gd" id="2_ne5ip"]
[ext_resource type="Texture2D" uid="uid://c5s0vceyp238o" path="res://Assets/roads.png" id="3_ueyml"]
[ext_resource type="Texture2D" uid="uid://cecbwkmco2fky" path="res://Assets/Grass.png" id="4_3xp2r"]
[ext_resource type="Texture2D" uid="uid://cshc8ige3mk40" path="res://Assets/vines.png" id="5_ob53r"]
[ext_resource type="Texture2D" uid="uid://lti6orhxmb4e" path="res://Assets/Heart.png" id="6_b8d8v"]
[ext_resource type="Texture2D" uid="uid://bvy0ghl8sg4ad" path="res://Assets/TilePlacementIndicator.png" id="7_oi41x"]
[ext_resource type="Texture2D" uid="uid://c6sw5u21klxxx" path="res://Assets/Wall.png" id="7_rngik"]
[ext_resource type="Script" path="res://Scripts/EnemyManager.gd" id="8_270qb"]
[ext_resource type="PackedScene" uid="uid://byn1cb28q6rje" path="res://Enemies/Basic Enemy.tscn" id="9_58at5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tlpgq"]
texture = ExtResource("3_ueyml")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 1
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 1
1:0/0/terrains_peering_bit/bottom_side = 1
1:0/0/terrains_peering_bit/top_side = 1
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 1
2:0/0/terrains_peering_bit/top_side = 1
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 1
3:0/0/terrains_peering_bit/bottom_side = 1
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 1
0:1/0/terrains_peering_bit/right_side = 1
0:1/0/terrains_peering_bit/left_side = 1
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 1
1:1/0/terrains_peering_bit/right_side = 1
1:1/0/terrains_peering_bit/bottom_side = 1
1:1/0/terrains_peering_bit/left_side = 1
1:1/0/terrains_peering_bit/top_side = 1
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 1
2:1/0/terrains_peering_bit/right_side = 1
2:1/0/terrains_peering_bit/left_side = 1
2:1/0/terrains_peering_bit/top_side = 1
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 1
3:1/0/terrains_peering_bit/right_side = 1
3:1/0/terrains_peering_bit/bottom_side = 1
3:1/0/terrains_peering_bit/left_side = 1
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 1
0:2/0/terrains_peering_bit/right_side = 1
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 1
1:2/0/terrains_peering_bit/right_side = 1
1:2/0/terrains_peering_bit/bottom_side = 1
1:2/0/terrains_peering_bit/top_side = 1
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 1
2:2/0/terrains_peering_bit/right_side = 1
2:2/0/terrains_peering_bit/top_side = 1
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 1
3:2/0/terrains_peering_bit/right_side = 1
3:2/0/terrains_peering_bit/bottom_side = 1
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 1
0:3/0/terrains_peering_bit/left_side = 1
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 1
1:3/0/terrains_peering_bit/bottom_side = 1
1:3/0/terrains_peering_bit/left_side = 1
1:3/0/terrains_peering_bit/top_side = 1
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 1
2:3/0/terrains_peering_bit/left_side = 1
2:3/0/terrains_peering_bit/top_side = 1
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 1
3:3/0/terrains_peering_bit/bottom_side = 1
3:3/0/terrains_peering_bit/left_side = 1

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y2gas"]
texture = ExtResource("4_3xp2r")
texture_region_size = Vector2i(48, 48)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0

[sub_resource type="TileSet" id="TileSet_2b6wa"]
tile_size = Vector2i(48, 48)
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "Grass"
terrain_set_0/terrain_0/color = Color(0.294118, 0.745098, 0.14902, 1)
terrain_set_0/terrain_1/name = "Roads"
terrain_set_0/terrain_1/color = Color(0.223529, 0.223529, 0.223529, 1)
sources/0 = SubResource("TileSetAtlasSource_tlpgq")
sources/1 = SubResource("TileSetAtlasSource_y2gas")

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_2fwop"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u0h1w"]
texture = ExtResource("5_ob53r")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/metadata/_better_terrain = {
"type": 1
}
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/top_side = 0
1:0/0/metadata/_better_terrain = {
4: [0],
12: [0],
"type": 1
}
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/metadata/_better_terrain = {
4: [0],
"type": 1
}
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/terrains_peering_bit/top_side = 0
3:0/0/metadata/_better_terrain = {
12: [0],
"type": 1
}
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/left_side = 0
0:1/0/metadata/_better_terrain = {
0: [0],
8: [0],
"type": 1
}
1:1/next_alternative_id = 2
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/metadata/_better_terrain = {
0: [0],
4: [0],
8: [0],
12: [0],
"type": 1
}
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/terrains_peering_bit/right_side = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/metadata/_better_terrain = {
0: [0],
4: [0],
8: [0],
"type": 1
}
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/terrains_peering_bit/right_side = 0
3:1/0/terrains_peering_bit/left_side = 0
3:1/0/terrains_peering_bit/top_side = 0
3:1/0/metadata/_better_terrain = {
0: [0],
8: [0],
12: [0],
"type": 1
}
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/terrains_peering_bit/left_side = 0
0:2/0/metadata/_better_terrain = {
8: [0],
"type": 1
}
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/terrains_peering_bit/bottom_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/metadata/_better_terrain = {
4: [0],
8: [0],
12: [0],
"type": 1
}
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/terrains_peering_bit/bottom_side = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/metadata/_better_terrain = {
4: [0],
8: [0],
"type": 1
}
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/terrains_peering_bit/left_side = 0
3:2/0/terrains_peering_bit/top_side = 0
3:2/0/metadata/_better_terrain = {
8: [0],
12: [0],
"type": 1
}
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/terrains_peering_bit/right_side = 0
0:3/0/metadata/_better_terrain = {
0: [0],
"type": 1
}
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/bottom_side = 0
1:3/0/terrains_peering_bit/top_side = 0
1:3/0/metadata/_better_terrain = {
0: [0],
4: [0],
12: [0],
"type": 1
}
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/terrains_peering_bit/right_side = 0
2:3/0/terrains_peering_bit/bottom_side = 0
2:3/0/metadata/_better_terrain = {
0: [0],
4: [0],
"type": 1
}
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/terrains_peering_bit/right_side = 0
3:3/0/terrains_peering_bit/top_side = 0
3:3/0/metadata/_better_terrain = {
0: [0],
12: [0],
"type": 1
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_18lpw"]
texture = ExtResource("6_b8d8v")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 1
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/metadata/_better_terrain = {
"type": 2
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r78mf"]
texture = ExtResource("7_rngik")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/metadata/_better_terrain = {
"type": 3
}

[sub_resource type="TileSet" id="TileSet_w8vq1"]
physics_layer_0/collision_layer = 1
physics_layer_0/physics_material = SubResource("PhysicsMaterial_2fwop")
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "Vines"
terrain_set_0/terrain_0/color = Color(0.333333, 0.603922, 0.117647, 1)
terrain_set_0/terrain_1/name = "Heart 1"
terrain_set_0/terrain_1/color = Color(0.827451, 0, 0.184314, 1)
sources/0 = SubResource("TileSetAtlasSource_u0h1w")
sources/1 = SubResource("TileSetAtlasSource_18lpw")
sources/2 = SubResource("TileSetAtlasSource_r78mf")
metadata/_better_terrain = {
"decoration": ["Decoration", Color(0.411765, 0.411765, 0.411765, 1), 3, [], {
"path": "res://addons/better-terrain/icons/Decoration.svg"
}],
"terrains": [["Vines", Color(0.537255, 0.945098, 0.52549, 1), 2, [], {
"coord": Vector2i(1, 1),
"source_id": 0
}], ["BasicVine", Color(0, 0.545098, 0.239216, 1), 0, [0], {
"coord": Vector2i(0, 0),
"source_id": 0
}], ["Heart", Color(0.738218, 0.191108, 0.341885, 1), 0, [0], {
"coord": Vector2i(0, 0),
"source_id": 1
}], ["Wall", Color(0.270588, 0.258824, 0.12549, 1), 0, [], {
"coord": Vector2i(0, 0),
"source_id": 2
}]],
"version": "0.2"
}

[node name="Grid" type="Node2D"]
script = ExtResource("1_23fgj")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(144, 81)
position_smoothing_enabled = true
position_smoothing_speed = 20.0
script = ExtResource("2_ne5ip")

[node name="BackgroundTileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_2b6wa")
format = 2
layer_0/tile_data = PackedInt32Array(851991, 1, 0, 786455, 1, 0, 720919, 1, 0, 655383, 1, 0, 589847, 1, 0, 524311, 1, 0, 458775, 1, 0, 393239, 1, 0, 327703, 1, 0, 262167, 1, 0, 196631, 1, 0, 131095, 1, 0, 65559, 1, 0, 23, 1, 0, 851990, 1, 0, 786454, 1, 0, 720918, 1, 0, 655382, 1, 0, 589846, 1, 0, 524310, 1, 0, 458774, 1, 0, 393238, 1, 0, 327702, 1, 0, 262166, 1, 0, 196630, 1, 0, 131094, 1, 0, 65558, 1, 0, 22, 1, 0, 851989, 1, 0, 786453, 1, 0, 720917, 1, 0, 655381, 1, 0, 589845, 1, 0, 524309, 1, 0, 458773, 1, 0, 393237, 1, 0, 327701, 1, 0, 262165, 1, 0, 196629, 1, 0, 131093, 1, 0, 65557, 1, 0, 21, 1, 0, 851988, 1, 0, 786452, 1, 0, 720916, 1, 0, 655380, 1, 0, 589844, 1, 0, 524308, 1, 0, 458772, 1, 0, 393236, 1, 0, 327700, 1, 0, 262164, 1, 0, 196628, 1, 0, 131092, 1, 0, 65556, 1, 0, 20, 1, 0, 851987, 1, 0, 786451, 1, 0, 720915, 1, 0, 655379, 1, 0, 589843, 1, 0, 524307, 1, 0, 458771, 1, 0, 393235, 1, 0, 327699, 1, 0, 262163, 1, 0, 196627, 1, 0, 131091, 1, 0, 65555, 1, 0, 19, 1, 0, 851986, 1, 0, 786450, 1, 0, 720914, 1, 0, 655378, 1, 0, 589842, 1, 0, 524306, 1, 0, 458770, 1, 0, 393234, 1, 0, 327698, 1, 0, 262162, 1, 0, 196626, 1, 0, 131090, 1, 0, 65554, 1, 0, 18, 1, 0, 851985, 1, 0, 786449, 1, 0, 720913, 1, 0, 655377, 1, 0, 589841, 1, 0, 524305, 1, 0, 458769, 1, 0, 393233, 1, 0, 327697, 1, 0, 262161, 1, 0, 196625, 1, 0, 131089, 1, 0, 65553, 1, 0, 17, 1, 0, 851984, 1, 0, 786448, 1, 0, 720912, 1, 0, 655376, 1, 0, 589840, 1, 0, 524304, 1, 0, 458768, 1, 0, 393232, 1, 0, 327696, 1, 0, 262160, 1, 0, 196624, 1, 0, 131088, 1, 0, 65552, 1, 0, 16, 1, 0, 851983, 1, 0, 786447, 1, 0, 720911, 1, 0, 655375, 1, 0, 589839, 1, 0, 524303, 1, 0, 458767, 1, 0, 393231, 1, 0, 327695, 1, 0, 262159, 1, 0, 196623, 1, 0, 131087, 1, 0, 65551, 1, 0, 15, 1, 0, 851982, 1, 0, 786446, 1, 0, 720910, 1, 0, 655374, 1, 0, 589838, 1, 0, 524302, 1, 0, 458766, 1, 0, 393230, 1, 0, 327694, 1, 0, 262158, 1, 0, 196622, 1, 0, 131086, 1, 0, 65550, 1, 0, 14, 1, 0, 851981, 1, 0, 786445, 1, 0, 720909, 1, 0, 655373, 1, 0, 589837, 1, 0, 524301, 1, 0, 458765, 1, 0, 393229, 1, 0, 327693, 1, 0, 262157, 1, 0, 196621, 1, 0, 131085, 1, 0, 65549, 1, 0, 13, 1, 0, 851980, 1, 0, 786444, 131072, 3, 720908, 65536, 0, 655372, 65536, 0, 589836, 65536, 0, 524300, 65536, 0, 458764, 65536, 0, 393228, 65536, 3, 327692, 65536, 0, 262156, 65536, 0, 196620, 65536, 0, 131084, 65536, 0, 65548, 65536, 0, 12, 196608, 3, 851979, 1, 0, 786443, 0, 1, 720907, 1, 0, 655371, 1, 0, 589835, 1, 0, 524299, 1, 0, 458763, 1, 0, 393227, 0, 1, 327691, 1, 0, 262155, 1, 0, 196619, 1, 0, 131083, 1, 0, 65547, 1, 0, 11, 0, 1, 851978, 1, 0, 786442, 0, 1, 720906, 1, 0, 655370, 1, 0, 589834, 1, 0, 524298, 1, 0, 458762, 1, 0, 393226, 0, 1, 327690, 1, 0, 262154, 1, 0, 196618, 1, 0, 131082, 1, 0, 65546, 1, 0, 10, 0, 1, 851977, 1, 0, 786441, 0, 1, 720905, 1, 0, 655369, 1, 0, 589833, 1, 0, 524297, 1, 0, 458761, 1, 0, 131081, 1, 0, 65545, 1, 0, 9, 0, 1, 851976, 1, 0, 786440, 0, 1, 720904, 1, 0, 655368, 1, 0, 589832, 1, 0, 524296, 1, 0, 458760, 1, 0, 393224, 0, 1, 327688, 1, 0, 262152, 1, 0, 196616, 1, 0, 131080, 1, 0, 65544, 1, 0, 8, 0, 1, 851975, 1, 0, 786439, 0, 1, 720903, 1, 0, 655367, 1, 0, 589831, 1, 0, 524295, 1, 0, 458759, 1, 0, 393223, 0, 1, 327687, 1, 0, 262151, 1, 0, 196615, 1, 0, 131079, 1, 0, 65543, 1, 0, 7, 0, 1, 851974, 1, 0, 786438, 131072, 1, 720902, 65536, 0, 655366, 65536, 0, 589830, 65536, 0, 524294, 65536, 0, 458758, 65536, 0, 393222, 65536, 1, 327686, 65536, 0, 262150, 65536, 0, 196614, 65536, 0, 131078, 65536, 0, 65542, 65536, 0, 6, 196608, 1, 851973, 1, 0, 786437, 0, 1, 720901, 1, 0, 655365, 1, 0, 589829, 1, 0, 524293, 1, 0, 458757, 1, 0, 393221, 0, 1, 327685, 1, 0, 262149, 1, 0, 196613, 1, 0, 131077, 1, 0, 65541, 1, 0, 5, 0, 1, 851972, 1, 0, 786436, 0, 1, 720900, 1, 0, 655364, 1, 0, 589828, 1, 0, 524292, 1, 0, 458756, 1, 0, 393220, 0, 1, 327684, 1, 0, 262148, 1, 0, 196612, 1, 0, 131076, 1, 0, 65540, 1, 0, 4, 0, 1, 851971, 1, 0, 786435, 0, 1, 720899, 1, 0, 655363, 1, 0, 589827, 1, 0, 524291, 1, 0, 458755, 1, 0, 393219, 0, 1, 327683, 1, 0, 262147, 1, 0, 196611, 1, 0, 131075, 1, 0, 65539, 1, 0, 3, 0, 1, 851970, 1, 0, 786434, 0, 1, 720898, 1, 0, 655362, 1, 0, 589826, 1, 0, 524290, 1, 0, 458754, 1, 0, 393218, 0, 1, 327682, 1, 0, 262146, 1, 0, 196610, 1, 0, 131074, 1, 0, 65538, 1, 0, 2, 0, 1, 851969, 1, 0, 786433, 0, 1, 720897, 1, 0, 655361, 1, 0, 589825, 1, 0, 524289, 1, 0, 458753, 1, 0, 393217, 0, 1, 327681, 1, 0, 262145, 1, 0, 196609, 1, 0, 131073, 1, 0, 65537, 1, 0, 1, 0, 1, 851968, 1, 0, 786432, 131072, 2, 720896, 65536, 0, 655360, 65536, 0, 589824, 65536, 0, 524288, 65536, 0, 458752, 65536, 0, 393216, 65536, 2, 327680, 65536, 0, 262144, 65536, 0, 196608, 65536, 0, 131072, 65536, 0, 65536, 65536, 0, 0, 196608, 2, 196617, 1, 0, 262153, 1, 0, 327689, 1, 0, 393225, 0, 1)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_w8vq1")
format = 2
layer_0/tile_data = PackedInt32Array(262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0, 262152, 2, 0, 262153, 2, 0, 327684, 2, 0, 327689, 2, 0, 393220, 2, 0, 393225, 2, 0, 458756, 2, 0, 458761, 2, 0, 524292, 2, 0, 524297, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 2, 0, 262156, 2, 0, 262157, 2, 0, 262158, 2, 0, 262159, 2, 0, 262160, 2, 0, 327696, 2, 0, 393232, 2, 0, 458768, 2, 0, 524304, 2, 0, 589836, 2, 0, 589837, 2, 0, 589838, 2, 0, 589839, 2, 0, 589840, 2, 0, 262155, 2, 0, 327691, 2, 0, 393227, 2, 0, 458763, 2, 0, 524299, 2, 0, 589835, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 786436, 2, 0, 786441, 2, 0, 851972, 2, 0, 851977, 2, 0, 917508, 2, 0, 917513, 2, 0, 983044, 2, 0, 983049, 2, 0, 1048580, 2, 0, 1048581, 2, 0, 1048582, 2, 0, 1048583, 2, 0, 1048584, 2, 0, 1048585, 2, 0, 720907, 2, 0, 720908, 2, 0, 720909, 2, 0, 720910, 2, 0, 720911, 2, 0, 720912, 2, 0, 786443, 2, 0, 786448, 2, 0, 851979, 2, 0, 851984, 2, 0, 917515, 2, 0, 917520, 2, 0, 983051, 2, 0, 983056, 2, 0, 1048587, 2, 0, 1048588, 2, 0, 1048589, 2, 0, 1048590, 2, 0, 1048591, 2, 0, 1048592, 2, 0, 720918, 2, 0, 720919, 2, 0, 720920, 2, 0, 720921, 2, 0, 720922, 2, 0, 720923, 2, 0, 786454, 2, 0, 786459, 2, 0, 851990, 2, 0, 851995, 2, 0, 917526, 2, 0, 917531, 2, 0, 983062, 2, 0, 983067, 2, 0, 1048598, 2, 0, 1048599, 2, 0, 1048600, 2, 0, 1048601, 2, 0, 1048602, 2, 0, 1048603, 2, 0, 720925, 2, 0, 720926, 2, 0, 720927, 2, 0, 720928, 2, 0, 720929, 2, 0, 720930, 2, 0, 786461, 2, 0, 786466, 2, 0, 851997, 2, 0, 852002, 2, 0, 917533, 2, 0, 917538, 2, 0, 983069, 2, 0, 983074, 2, 0, 1048605, 2, 0, 1048606, 2, 0, 1048607, 2, 0, 1048608, 2, 0, 1048609, 2, 0, 1048610, 2, 0, 262166, 2, 0, 262167, 2, 0, 262168, 2, 0, 262169, 2, 0, 262170, 2, 0, 262171, 2, 0, 327702, 2, 0, 327707, 2, 0, 393238, 2, 0, 393243, 2, 0, 458779, 2, 0, 524310, 2, 0, 524315, 2, 0, 589846, 2, 0, 589847, 2, 0, 589848, 2, 0, 589849, 2, 0, 589850, 2, 0, 589851, 2, 0, 262173, 2, 0, 262174, 2, 0, 262175, 2, 0, 262176, 2, 0, 262177, 2, 0, 262178, 2, 0, 327709, 2, 0, 327714, 2, 0, 393245, 2, 0, 393250, 2, 0, 458781, 2, 0, 458786, 2, 0, 524317, 2, 0, 524322, 2, 0, 589853, 2, 0, 589854, 2, 0, 589855, 2, 0, 589856, 2, 0, 589857, 2, 0, 589858, 2, 0, 1441796, 2, 0, 1441797, 2, 0, 1441798, 2, 0, 1441799, 2, 0, 1441800, 2, 0, 1441801, 2, 0, 1507332, 2, 0, 1507337, 2, 0, 1572868, 2, 0, 1572873, 2, 0, 1638404, 2, 0, 1638409, 2, 0, 1703940, 2, 0, 1703945, 2, 0, 1769476, 2, 0, 1769477, 2, 0, 1769478, 2, 0, 1769479, 2, 0, 1769480, 2, 0, 1769481, 2, 0, 1441803, 2, 0, 1441804, 2, 0, 1441805, 2, 0, 1441806, 2, 0, 1441807, 2, 0, 1441808, 2, 0, 1507339, 2, 0, 1507344, 2, 0, 1572875, 2, 0, 1572880, 2, 0, 1638411, 2, 0, 1638416, 2, 0, 1703947, 2, 0, 1703952, 2, 0, 1769483, 2, 0, 1769484, 2, 0, 1769485, 2, 0, 1769486, 2, 0, 1769487, 2, 0, 1769488, 2, 0, 1900548, 2, 0, 1900549, 2, 0, 1900550, 2, 0, 1900551, 2, 0, 1900552, 2, 0, 1900553, 2, 0, 1966084, 2, 0, 1966089, 2, 0, 2031620, 2, 0, 2031625, 2, 0, 2097156, 2, 0, 2097161, 2, 0, 2162692, 2, 0, 2162697, 2, 0, 2228228, 2, 0, 2228229, 2, 0, 2228230, 2, 0, 2228231, 2, 0, 2228232, 2, 0, 2228233, 2, 0, 1900555, 2, 0, 1900556, 2, 0, 1900557, 2, 0, 1900558, 2, 0, 1900559, 2, 0, 1900560, 2, 0, 1966091, 2, 0, 1966096, 2, 0, 2031627, 2, 0, 2031632, 2, 0, 2097163, 2, 0, 2097168, 2, 0, 2162699, 2, 0, 2162704, 2, 0, 2228235, 2, 0, 2228236, 2, 0, 2228237, 2, 0, 2228238, 2, 0, 2228239, 2, 0, 2228240, 2, 0, 1441814, 2, 0, 1441815, 2, 0, 1441816, 2, 0, 1441817, 2, 0, 1441818, 2, 0, 1441819, 2, 0, 1507350, 2, 0, 1507355, 2, 0, 1572886, 2, 0, 1572891, 2, 0, 1638422, 2, 0, 1638427, 2, 0, 1703958, 2, 0, 1703963, 2, 0, 1769494, 2, 0, 1769495, 2, 0, 1769496, 2, 0, 1769497, 2, 0, 1769498, 2, 0, 1769499, 2, 0, 1441821, 2, 0, 1441822, 2, 0, 1441823, 2, 0, 1441824, 2, 0, 1441825, 2, 0, 1441826, 2, 0, 1507357, 2, 0, 1507362, 2, 0, 1572893, 2, 0, 1572898, 2, 0, 1638429, 2, 0, 1638434, 2, 0, 1703965, 2, 0, 1703970, 2, 0, 1769501, 2, 0, 1769502, 2, 0, 1769503, 2, 0, 1769504, 2, 0, 1769505, 2, 0, 1769506, 2, 0, 1900566, 2, 0, 1900567, 2, 0, 1900568, 2, 0, 1900569, 2, 0, 1900570, 2, 0, 1900571, 2, 0, 1966102, 2, 0, 1966107, 2, 0, 2031638, 2, 0, 2031643, 2, 0, 2097174, 2, 0, 2097179, 2, 0, 2162710, 2, 0, 2162715, 2, 0, 2228246, 2, 0, 2228247, 2, 0, 2228248, 2, 0, 2228249, 2, 0, 2228250, 2, 0, 2228251, 2, 0, 1900573, 2, 0, 1900574, 2, 0, 1900575, 2, 0, 1900576, 2, 0, 1900577, 2, 0, 1900578, 2, 0, 1966109, 2, 0, 1966114, 2, 0, 2031645, 2, 0, 2031650, 2, 0, 2097181, 2, 0, 2097186, 2, 0, 2162717, 2, 0, 2162722, 2, 0, 2228253, 2, 0, 2228254, 2, 0, 2228255, 2, 0, 2228256, 2, 0, 2228257, 2, 0, 2228258, 2, 0, 458774, 2, 0, 1245203, 1, 0)

[node name="TilePlacementIndicator" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("7_oi41x")

[node name="EnemyManager" type="Node" parent="."]
script = ExtResource("8_270qb")

[node name="BasicEnemy" parent="EnemyManager" instance=ExtResource("9_58at5")]
position = Vector2(17, 18)

[node name="WaveTimer" type="Timer" parent="EnemyManager"]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="EnemyManager/WaveTimer" to="EnemyManager" method="_on_wave_timer_timeout"]
